--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -5,6 +5,9 @@ html
 		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 		title PWD
 		link(rel="stylesheet", href="css/reset.min.css")
+		link(rel='preconnect' href='https://fonts.googleapis.com')
+		link(rel='preconnect' href='https://fonts.gstatic.com' crossorigin)
+		link(href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap' rel='stylesheet')
 		link(rel="stylesheet", href="css/main.css")
 	body
 
@@ -22,16 +25,17 @@ html
 							.card__price 189 ₽
 							.card__title
 								a(href="") Oral-B ополаскиватель для полости рта Комплекс LASTING FRESHNESS Arctic Mint 250 мл
-							.card__button
-								a(href="") В корзину
-							.card__counter.counter
-								.counter__button
-									svg.icon
-										use(xlink:href='#minus')
-								.counter__value <span>1</span>шт
-								.counter__button
-									svg.icon
-										use(xlink:href='#plus')
+							.card__tools
+								.card__button
+									a(href="") В корзину
+								.card__counter.counter
+									.counter__button.counter__button_minus
+										svg.icon
+											use(xlink:href='#minus')
+									.counter__value <span>1</span> шт
+									.counter__button.counter__button_plus
+										svg.icon
+											use(xlink:href='#plus')
 
 					.cards__card.card
 						.card__fav
@@ -43,16 +47,17 @@ html
 							.card__price 801 ₽
 							.card__title
 								a(href="") Сменные насадки для электрических зубных щеток Oral-B Sensi Ultrathin для бережной чистки, 2 шт.
-							.card__button
-								a(href="") В корзину
-							.card__counter.counter
-								.counter__button
-									svg.icon
-										use(xlink:href='#minus')
-								.counter__value <span>1</span>шт
-								.counter__button
-									svg.icon
-										use(xlink:href='#plus')
+							.card__tools
+								.card__button
+									a(href="") В корзину
+								.card__counter.counter
+									.counter__button.counter__button_minus
+										svg.icon
+											use(xlink:href='#minus')
+									.counter__value <span>1</span> шт
+									.counter__button.counter__button_plus
+										svg.icon
+											use(xlink:href='#plus')
 
 					.cards__card.card
 						.card__fav
@@ -64,16 +69,17 @@ html
 							.card__price 2 289 ₽
 							.card__title
 								a(href="") Электрическая зубная щетка Philips Sonicare 2 Series Gum Health HX6232/20 с двумя насадками, черный
-							.card__button
-								a(href="") В корзину
-							.card__counter.counter
-								.counter__button
-									svg.icon
-										use(xlink:href='#minus')
-								.counter__value <span>1</span>шт
-								.counter__button
-									svg.icon
-										use(xlink:href='#plus')
+							.card__tools
+								.card__button
+									a(href="") В корзину
+								.card__counter.counter
+									.counter__button.counter__button_minus
+										svg.icon
+											use(xlink:href='#minus')
+									.counter__value <span>1</span> шт
+									.counter__button.counter__button_plus
+										svg.icon
+											use(xlink:href='#plus')
 
 					.cards__card.card
 						.card__fav
@@ -82,24 +88,25 @@ html
 						.card__image
 							img(src="img/card4.jpg" alt="")
 						.card__body
-							.card__price 385 ₽ <span>540 ₽</span>
+							.card__price.card__price_active 385 ₽ <span>540 ₽</span>
 							.card__title
 								a(href="") Электрическая зубная щетка Philips Sonicare 2 Series Gum Health HX6232/20 с двумя насадками, черный
-							.card__button
-								a(href="") В корзину
-							.card__counter.counter
-								.counter__button
-									svg.icon
-										use(xlink:href='#minus')
-								.counter__value <span>1</span>шт
-								.counter__button
-									svg.icon
-										use(xlink:href='#plus')
+							.card__tools
+								.card__button
+									a(href="") В корзину
+								.card__counter.counter
+									.counter__button.counter__button_minus
+										svg.icon
+											use(xlink:href='#minus')
+									.counter__value <span>1</span> шт
+									.counter__button.counter__button_plus
+										svg.icon
+											use(xlink:href='#plus')
 
 
 		svg.hidden(width='0' height='0')
-			symbol#fav(fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24')
-				path(d='M1 8.4C1 4 4.5 3 6.5 3C9 3 11 5 12 6.5C13 5 15 3 17.5 3C19.5 3 23 4 23 8.4C23 15 12 21 12 21C12 21 1 15 1 8.4Z' stroke='#525252' stroke-width='2')
+			symbol#fav(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24')
+				path(d='M1 8.4C1 4 4.5 3 6.5 3C9 3 11 5 12 6.5C13 5 15 3 17.5 3C19.5 3 23 4 23 8.4C23 15 12 21 12 21C12 21 1 15 1 8.4Z' stroke-width='2')
 			symbol#minus(fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 25 24')
 				path(d='M19.25 10.75H21.25C21.5815 10.75 21.8995 10.8817 22.1339 11.1161C22.3683 11.3505 22.5 11.6685 22.5 12C22.5 12.3315 22.3683 12.6495 22.1339 12.8839C21.8995 13.1183 21.5815 13.25 21.25 13.25H13.75H3.75C3.41848 13.25 3.10054 13.1183 2.86612 12.8839C2.6317 12.6495 2.5 12.3315 2.5 12C2.5 11.6685 2.6317 11.3505 2.86612 11.1161C3.10054 10.8817 3.41848 10.75 3.75 10.75H13.75H19.25Z' fill='#1A45DB')
 			symbol#plus(fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 25 24')
